# py2binmod

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  pyproject.toml  repomix.config.json  rust-toolchain.toml
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: default.yml  release.yml  stable.yml
.taskfile/: docker.yml  python.yml  rust.yml  version.yml
python/py2binmod/: __init__.py  __main__.py  _py2binmod.pyi  core.py
python/py2binmod/cli/: __init__.py  commands.py  utils.py
src/: commands.rs  error.rs  generator.rs  lib.rs  py.rs  types.rs  ui.rs
src/codegen/: lib_rs.rs  mod.rs  traits.rs
src/compiler/: cargo.rs  error.rs  mod.rs  traits.rs  types.rs  utils.rs
src/parser/: ast_analyzer.rs  error.rs  layout_resolver.rs  mod.rs  traits.rs
src/parser/file_walker/: default.rs  mod.rs  traits.rs
src/parser/metadata_parser/: mod.rs  pep621.rs  traits.rs
src/template/: error.rs  mod.rs  traits.rs  types.rs
src/template/templates/: Cargo.toml.j2  rust-toolchain.toml.j2
src/template/templates/.cargo/: config.toml.j2
src/template/units/: codegen.rs  jinja.rs  mod.rs
