[package]
name = "py2binmod"
version = "0.1.0"
edition = "2024"
description = "Binmod web-assembly module compiler for Python"
repository = "https://gitlab.com/binmod/py2binmod"
license = "ISC"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
minijinja = "2.10.2"
rust-embed = { version = "8.7.2", features = ["include-exclude", "debug-embed"] }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.1" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.14.1" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
pyo3 = { version = "^0.27.1", features = ["extension-module", "abi3-py310", "serde", "experimental-async"] }
pyo3-async-runtimes = { version = "^0.27.0", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15" }
futures = { version = "0.3.31" }
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.95"
prettyplease = "0.2.35"
async-trait = "0.1.89"
toml = "0.9.8"
tempfile = "3.23.0"
console = "0.16.1"
indicatif = { version = "0.18.3", features = ["futures"] }
syntect = "5.3.0"
once_cell = "1.21.3"


[build-dependencies]
pyo3-build-config = "0.27.1"
